--- a/src/Components/HomeComponents/Collaboration.css
+++ b/src/Components/HomeComponents/Collaboration.css
@@ -45,9 +45,7 @@
   text-align: center;
 }
 .vertical-line-colab {
-  margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 30px;
+  margin: 20px 30px 0px 50px;
   width: 2px;
   height: 50px;
   background-color: white;
