--- a/src/Components/HomeComponents/Offerings.css
+++ b/src/Components/HomeComponents/Offerings.css
@@ -2,9 +2,7 @@
   margin: 50px 200px;
 }
 .verical-line-offerings {
-  margin-top: 20px;
-  margin-left: 50px;
-  margin-right: 30px;
+  margin: 20px 30px 0px 50px;
   width: 2px;
   height: 410px;
   background-color: blue;
