--- a/src/Components/HomeComponents/Testmonial.css
+++ b/src/Components/HomeComponents/Testmonial.css
@@ -1,9 +1,5 @@
 .testmonial-main {
-  padding-top: 10px;
-  padding-left: 120px;
-  padding-right: 120px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 110px 120px 100px 120px;
   background-color: #474d58;
 }
 .message {
@@ -14,9 +10,7 @@
 
 .test-sub {
   background-color: #c7c9c9;
-  padding: 100px;
-  padding-bottom: 50px;
-  padding-top: 0px;
+  padding: 0px 100px 50px 100px;
   border-radius: 50px;
   margin-left: 80px;
   margin-right: 100px;
